fixed navigation display on mobile

--- a/AXIT/src/sass/main.sass
+++ b/AXIT/src/sass/main.sass
@@ -152,12 +152,13 @@ input::-moz-placeholder
 
 .nav-list
   position: fixed
-  top: -100%
+  top: -150%
   right: 0
   left: 0
   padding-top: 50px
   text-align: center
   transition: all .3s
+  overflow-y: auto
 
   li
     margin: 8px
@@ -259,6 +260,7 @@ input::-moz-placeholder
 .banner-form-input
   display: inline-block
   width: 80%
+  margin-top: 4px
   margin-bottom: 25px
   padding: 8px
 
